<resources>
    <string name="GetQuotations">Get quotations</string>
    <string name="FavouriteQuotations">Favourite quotations</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="QuotationShake">Quotation Shake</string>
    <string name="RandomQuotations">Random quotations</string>
    <string name="About_texto">Quotation Shake by \n\nLUIS LODOSO GIMÉNEZ\n\nluislodosogimenez@gmail.com\n\n2023</string>
    <string name="foto_perfil">FOTO PERFIL</string>
    <string name="name_that_identifies_the_user">Name that identifies the user</string>
    <string name="insert_your_name">Insert your name</string>
    <string name="quotations_will_be_received_in_the_selected_language">Quotations will be received in the selected language</string>
    <string name="web_requests_will_be_performed_using_the_selected_http_method">Web requests will be performed using the selected HTTP method</string>
    <string name="get" translatable="false">GET</string>
    <string name="post" translatable="false">POST</string>
    <string name="author_info">Author info</string>
    <string name="hello_1s_npress_refresh_to_get_a_new_quotation">Hello %1s!. Press Refresh to get a new quotation</string>
    <string name="nameless_one">Nameless One</string>
    <string name="this_is_a_sample_quotation">Sample quote %1d</string>
    <string name="this_is_a_sample_autor">Sample autor %1d</string>
    <string name="idioms">Idioms</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="add">ADD</string>
    <string name="refresh">REFRESH</string>
    <string name="clear_all">Clear All</string>
    <string name="user_name">User name</string>
    <string name="quotation_language">Quotation language</string>
    <string name="http_request_method">HTTP request method</string>
    <string name="databases_method">DATABASES METHOD</string>
    <string name="sqliteopenhelper_or_room" translatable="false">SQLiteOpenHelper or Room</string>
    <string name="sqliteopenhelper" translatable="false">SQLiteOpenHelper</string>
    <string name="room" translatable="false">Room</string>
    <string name="app_name">QUOTATIONS</string>
    <string name="are_you_sure_that_you_want_to_delete_this_quotation">Are you sure that you want to delete this quotation</string>
    <string name="nameless">\"nameless\"</string>

</resources>
